# HappyBackending

FastAPI_Serie/: README.md
FastAPI_Serie/0-introduzione/: main.py
FastAPI_Serie/1-endpoint/: main.py
FastAPI_Serie/10-depends/: main.py
FastAPI_Serie/11-1-file-upload/: Dockerfile  requirements.txt
FastAPI_Serie/11-background/: call_timer.py  cli_celery.txt  requirements.txt
FastAPI_Serie/12-testing/: .gitignore  Dockerfile
FastAPI_Serie/13-docker-compose/: Dockerfile  requirements.txt
FastAPI_Serie/14-templating/: requirements.txt
FastAPI_Serie/15-errors/: alembic.ini  docker-compose.yml
FastAPI_Serie/16-errors/: Dockerfile  requirements.txt
FastAPI_Serie/2-pydantic/: main.py
FastAPI_Serie/3-struttura/: .env
FastAPI_Serie/4-database/: .env
FastAPI_Serie/5-CRUD/: requirements.txt
FastAPI_Serie/6-deploy/: .gitignore  requirements.txt
FastAPI_Serie/7-utenti/: Dockerfile  requirements.txt
FastAPI_Serie/8-redis/: requirements.txt
FastAPI_Serie/9-websocket/: requirements.txt
docker/github-actions/: Dockerfile  main.py
docker/multi-stage-builds/: Dockerfile  comandi_console.txt  deploy.env  docker-compose.yml  env.docker  run_tests.py
fastapi-projects/chatbot/: assets.py  fallimenti.txt  frontend.html  main.py  pyproject.toml
pyinstaller/intro/: main.py
telegram/bot-da-zero/: README.md  mian.py
telegram/bot-formattazione-testo/: main.py
telegram/bot-message-handler/: main.py
telegram/bot-pulsanti/: config.py  main.py
tests/fastapi-vs-gin-r2/fastapi-performance/: main.py  pyproject.toml
tests/gin-performance/: go.mod
(+91 files in other folders)
